changed styling to fix the review card overflowing parent container once screen once screen shrunk beneath 500px

--- a/site/src/component/Review/ReviewCard.scss
+++ b/site/src/component/Review/ReviewCard.scss
@@ -37,6 +37,11 @@
     align-items: center;
     height: 24px;
   }
+
+  @media (max-width: 350px) {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
 
 .reviewcard-content {
